--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@deep-foundation/materialized-path": "0.0.6",
     "@deep-foundation/react-hasura": "^0.0.3",
     "@deep-foundation/store": "^0.0.3",
-    "@types/node": "^14.17.14",
     "@types/react": "^17.0.19",
     "apollo-boost": "^0.4.9",
     "apollo-server": "^2.21.0",
+    "apollo-server-express": "^3.5.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "graphql": "^15.5.0",
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@deep-foundation/hasura": "0.0.4",
+    "@types/node": "^14.17.34",
     "typescript": "^4.4.3"
   }
 }
