--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.101",
+  "version": "0.0.96",
   "scripts": {
     "dev": "(cd local && docker-compose down || true) && cross-env npm_config_yes=true JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" MIGRATIONS_HASURA_PATH=localhost:8080 MIGRATIONS_HASURA_SSL=0 MIGRATIONS_HASURA_SECRET=myadminsecretkey MIGRATIONS_DEEPLINKS_URL=http://host.docker.internal:3006 DEEPLINKS_HASURA_PATH=localhost:8080 DEEPLINKS_HASURA_SSL=0 DEEPLINKS_HASURA_SECRET=myadminsecretkey PORT=3006 npm run launch",
     "launch": "ts-node ./index.ts;",
@@ -21,43 +21,45 @@
     "snapshot:dump": "node snapshots/dump.js"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.3",
-    "@apollo/server": "^4.3.0",
-    "@capacitor/core": "^4.6.1",
-    "@deep-foundation/hasura": "^0.0.27",
-    "@deep-foundation/materialized-path": "^0.0.15",
-    "@deep-foundation/react-hasura": "^0.0.8",
-    "@deep-foundation/store": "^0.0.12",
-    "@types/react": "^18.0.26",
+    "@apollo/client": "^3.5.8",
+    "@deep-foundation/hasura": "0.0.18",
+    "@deep-foundation/materialized-path": "^0.0.11",
+    "@deep-foundation/react-hasura": "0.0.5",
+    "@deep-foundation/store": "0.0.6",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.17.34",
+    "@types/react": "^17.0.19",
+    "apollo-boost": "^0.4.9",
+    "apollo-server": "^2.21.0",
+    "apollo-server-core": "^3.6.1",
+    "apollo-server-express": "^3.5.0",
     "atob": "^2.1.2",
-    "axios": "^1.2.2",
-    "body-parser": "^1.20.1",
+    "axios": "^0.24.0",
+    "body-parser": "^1.19.0",
     "buffer": "^6.0.3",
-    "chai": "^4.3.7",
+    "chai": "^4.3.4",
     "cross-env": "^7.0.3",
-    "debug": "^4.3.4",
-    "dotenv": "^16.0.3",
-    "fix-path": "^4.0.0",
+    "debug": "^4.3.3",
+    "dotenv": "^8.2.0",
+    "fix-path": "^3.0.0",
     "get-port": "^5.1.1",
     "gists": "^2.0.0",
-    "graphql": "^16.6.0",
+    "graphql": "^15.5.0",
     "graphql-playground-middleware-express": "^1.7.23",
-    "graphql-tag": "^2.12.6",
-    "http-proxy-middleware": "^2.0.6",
-    "internal-ip": "^7.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "microtime": "^3.1.1",
-    "moesif-nodejs": "^3.3.2",
+    "graphql-tag": "^2.11.0",
+    "http-proxy-middleware": "^2.0.1",
+    "internal-ip": "^6.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "microtime": "^3.0.0",
+    "moesif-nodejs": "^3.1.19",
     "multer": "^1.4.5-lts.1",
-    "next": "^13.1.2",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.15",
     "prompt": "^1.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rimraf": "^4.0.4",
-    "supports-color": "^9.3.1",
-    "uniqid": "^5.4.0",
-    "wait-on": "^7.0.1"
+    "rimraf": "^3.0.2",
+    "supports-color": "^9.2.1",
+    "ts-jest": "^26.5.4",
+    "uniqid": "^5.3.0",
+    "wait-on": "^6.0.0"
   },
   "peerDependencies": {
     "react": "*"
@@ -66,12 +68,7 @@
     "node": "^14.15.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/jest": "^29.2.5",
-    "@types/node": "^18.11.18",
-    "jest": "^29.3.1",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "jest": "^26.6.3",
+    "typescript": "^4.4.3"
   }
 }
