--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@deep-foundation/hasura": "0.0.18",
     "@deep-foundation/materialized-path": "^0.0.11",
     "@deep-foundation/react-hasura": "0.0.5",
-    "@deep-foundation/store": "0.0.6",
+    "@deep-foundation/store": "file:../store",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.17.34",
     "@types/react": "^17.0.19",
