--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@apollo/server": "^4.3.0",
     "@deep-foundation/hasura": "0.0.18",
     "@deep-foundation/materialized-path": "^0.0.11",
-    "@deep-foundation/react-hasura": "0.0.5",
+    "@deep-foundation/react-hasura": "file:../react-hasura",
     "@deep-foundation/store": "file:../store",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.17.34",
