--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.104",
+  "version": "0.0.103",
   "scripts": {
     "dev": "(cd local && docker-compose down || true) && cross-env npm_config_yes=true JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" MIGRATIONS_HASURA_PATH=localhost:8080 MIGRATIONS_HASURA_SSL=0 MIGRATIONS_HASURA_SECRET=myadminsecretkey MIGRATIONS_DEEPLINKS_URL=http://host.docker.internal:3006 DEEPLINKS_HASURA_PATH=localhost:8080 DEEPLINKS_HASURA_SSL=0 DEEPLINKS_HASURA_SECRET=myadminsecretkey PORT=3006 npm run launch",
     "launch": "ts-node ./index.ts;",
@@ -21,10 +21,10 @@
     "snapshot:dump": "node snapshots/dump.js"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.4",
-    "@deep-foundation/hasura": "0.0.29",
-    "@deep-foundation/materialized-path": "0.0.18",
-    "@deep-foundation/react-hasura": "0.0.9",
+    "@apollo/client": "^3.5.8",
+    "@deep-foundation/hasura": "0.0.18",
+    "@deep-foundation/materialized-path": "^0.0.11",
+    "@deep-foundation/react-hasura": "0.0.5",
     "@deep-foundation/store": "0.0.13",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.17.34",
