--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@apollo/client": "^3.5.8",
     "@deep-foundation/hasura": "0.0.34",
     "@deep-foundation/materialized-path": "0.0.19",
+    "@deep-foundation/npm-packager": "^0.0.5",
     "@deep-foundation/react-hasura": "0.0.12",
     "@deep-foundation/store": "0.0.13",
     "@types/jest": "^26.0.22",
