--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "http-proxy-middleware": "^2.0.1",
     "internal-ip": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mathjs": "^11.6.0",
     "microtime": "^3.0.0",
     "moesif-nodejs": "^3.1.19",
     "multer": "^1.4.5-lts.1",
@@ -71,6 +72,8 @@
   },
   "devDependencies": {
     "jest": "^26.6.3",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
