--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "scripts": {
     "dev": "(cd local && docker-compose down || true) && cross-env npm_config_yes=true JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" MIGRATIONS_HASURA_PATH=localhost:8080 MIGRATIONS_HASURA_SSL=0 MIGRATIONS_HASURA_SECRET=myadminsecretkey MIGRATIONS_DEEPLINKS_URL=http://host.docker.internal:3006 DEEPLINKS_HASURA_PATH=localhost:8080 DEEPLINKS_HASURA_SSL=0 DEEPLINKS_HASURA_SECRET=myadminsecretkey PORT=3006 npm run launch",
     "launch": "ts-node ./index.ts;",
-    "bundle-mathjs": "export LIBPATH=./node_modules/mathjs/lib/cjs/index.js; BUNDLED=./mathjs/mathjs.js; ./mathjs/prepare.sh; npm run bundle-mathjs-lib; ./mathjs/postbundle.sh",
-    "bundle-mathjs-lib": "webpack --config ./mathjs/mathjs.webpack.config.js",
+    "bundle-mathjs-lib": "webpack --config ./bundles/mathjs.webpack.config.js",
+    "bundle-mathjs": "export LIBPATH=./node_modules/mathjs/lib/cjs/index.js; export BUNDLED=$(pwd)/bundles/mathjs.js; ./bundles/prepare.sh && npm run bundle-mathjs-lib && ./bundles/postbundle.sh",
+    "bundle-mathjs-test": "node ./bundles/mathjs.js",
+    "bundle-jsonschema-lib": "webpack --config ./bundles/jsonschema.webpack.config.js",
+    "bundle-jsonschema": "export LIBPATH=./node_modules/jsonschema/lib/index.js; export BUNDLED=$(pwd)/bundles/jsonschema.js; ./bundles/prepare.sh && npm run bundle-jsonschema-lib && ./bundles/postbundle.sh",
+    "bundle-jsonschema-test": "node ./bundles/jsonschema.js",
+    "bundle-all": "npm run bundle-mathjs && npm run bundle-jsonschema && npm run bundle-jsonschema-test && npm run bundle-mathjs-test",
     "package:build": "tsc --project tsconfig.json && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts)",
     "package:unbuild": "rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports/gql && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../..) && (cd ./benchmarks && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts && cd ..) && (cd ./imports/router && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../..) && (cd ./tests && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../)",
     "package:publish": "npm run package:build && npm publish --access public && npm run package:unbuild",
@@ -56,6 +61,7 @@
     "graphql-tag": "^2.11.0",
     "http-proxy-middleware": "^2.0.6",
     "internal-ip": "^6.2.0",
+    "jsonschema": "^1.4.1",
     "jsonwebtoken": "^8.5.1",
     "mathjs": "^11.6.0",
     "microtime": "^3.1.1",
@@ -67,6 +73,7 @@
     "supports-color": "^9.3.1",
     "ts-jest": "^26.5.4",
     "uniqid": "^5.3.0",
+    "url": "^0.11.0",
     "wait-on": "^6.0.0"
   },
   "peerDependencies": {
