--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "jest": "^26.6.3",
+    "react-dom": "^18.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "webpack": "^5.80.0",
