--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.21",
     "prompt": "^1.3.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
     "supports-color": "^9.3.1",
     "ts-jest": "^26.5.4",
@@ -83,6 +84,7 @@
     "node": "^14.21.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "jest": "^26.6.3",
     "ts-node": "^10.9.1",
