--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@deep-foundation/materialized-path": "^0.0.22",
     "@deep-foundation/npm-packager": "0.0.24",
     "@deep-foundation/npm-packager-ui": "0.0.8",
-    "@deep-foundation/react-hasura": "^0.0.14",
+    "@deep-foundation/react-hasura": "0.0.15",
     "@deep-foundation/store": "^0.0.18",
     "@deep-foundation/tsx": "0.0.3",
     "@types/jest": "^26.0.22",
