--- a/local/deepcase/docker-compose.yml
+++ b/local/deepcase/docker-compose.yml
@@ -14,6 +14,17 @@ services:
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
     extra_hosts: ['host.docker.internal:host-gateway']
+    environment:
+      DEEPLINKS_HASURA_PATH: '${DEEPLINKS_HASURA_PATH}'
+      DEEPLINKS_HASURA_SSL: '${DEEPLINKS_HASURA_SSL}'
+      DEEPLINKS_HASURA_SECRET: '${DEEPLINKS_HASURA_SECRET}'
+      NEXT_PUBLIC_DEEPLINKS_SERVER: '${NEXT_PUBLIC_DEEPLINKS_SERVER}'
+      NEXT_PUBLIC_ENGINES: '${NEXT_PUBLIC_ENGINES}'
+      NEXT_PUBLIC_GQL_PATH: '${NEXT_PUBLIC_GQL_PATH}'
+      NEXT_PUBLIC_GQL_SSL: '${NEXT_PUBLIC_GQL_SSL}'
+      NEXT_PUBLIC_DEEPLINKS_URL: '${NEXT_PUBLIC_DEEPLINKS_URL}'
+      DOCKER: 1
+      PORT: '${DEEPCASE_PORT}'
 networks:
   network:
     name: deep-network
