--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "snapshot:dump": "node snapshots/dump.js"
   },
   "dependencies": {
-    "@apollo/client": "3.7.9",
+    "@apollo/client": "^3.7.14",
     "@deep-foundation/deepcase": "0.0.21",
     "@deep-foundation/hasura": "^0.0.40",
     "@deep-foundation/materialized-path": "0.0.24",
@@ -65,6 +65,7 @@
     "microtime": "^3.1.1",
     "moesif-nodejs": "^3.3.2",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.11",
     "nodemon": "^2.0.21",
     "prompt": "^1.3.0",
     "react-dom": "^18.2.0",
