--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -20,6 +20,8 @@ jobs:
     name: dockerize
     runs-on: ubuntu-latest
     steps:
+      - name: Collect Docker Logs
+        uses: jwalton/gh-docker-logs@v2.2.2
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
