--- a/local/actions/docker-compose.yml
+++ b/local/actions/docker-compose.yml
@@ -12,11 +12,11 @@ services:
     volumes:
     - db-data:/var/lib/postgresql/data
     environment:
-      - 'POSTGRES_USER=${DEEP_POSTGRES_USER-postgres}'
-      - 'POSTGRES_PASSWORD=${DEEP_POSTGRES_PASSWORD-postgrespassword}'
-      - 'PGGSSENCMODE=${DEEP_POSTGRES_GSS_ENCODING_MODE-disable}'
-      - 'PGSSLMODE=${DEEP_POSTGRES_SSL_MODE-disable}'
-      - 'PGREQUIRESSL=${DEEP_POSTGRES_REQUIRE_SSL-0}'
+      POSTGRES_USER: ${DEEP_POSTGRES_USER-postgres}
+      POSTGRES_PASSWORD: ${DEEP_POSTGRES_PASSWORD-postgrespassword}
+      PGGSSENCMODE: ${DEEP_POSTGRES_GSS_ENCODING_MODE-disable}
+      PGSSLMODE: ${DEEP_POSTGRES_SSL_MODE-disable}
+      PGREQUIRESSL: ${DEEP_POSTGRES_REQUIRE_SSL-0}
     logging:
       driver: "json-file"
       options:
@@ -36,15 +36,15 @@ services:
     - "postgres"
     restart: always
     environment:
-      - 'HASURA_GRAPHQL_DATABASE_URL=${DEEP_HASURA_GRAPHQL_DATABASE_URL-postgres://postgres:postgrespassword@host.docker.internal:5432/postgres?sslmode=disable}'
-      - 'HASURA_GRAPHQL_ENABLE_CONSOLE=${DEEP_HASURA_GRAPHQL_ENABLE_CONSOLE-true}'
-      - 'HASURA_GRAPHQL_DEV_MODE=${DEEP_HASURA_GRAPHQL_DEV_MODE-true}'
-      - 'HASURA_GRAPHQL_LOG_LEVEL=${DEEP_HASURA_GRAPHQL_LOG_LEVEL-debug}'
-      - 'HASURA_GRAPHQL_ENABLED_LOG_TYPES=${DEEP_HASURA_GRAPHQL_ENABLED_LOG_TYPES-startup,http-log,webhook-log,websocket-log,query-log}'
-      - 'HASURA_GRAPHQL_ADMIN_SECRET=${DEEP_HASURA_GRAPHQL_ADMIN_SECRET-myadminsecretkey}'
-      - 'HASURA_GRAPHQL_JWT_SECRET=${DEEP_HASURA_GRAPHQL_JWT_SECRET-"{\"type\":\"HS256\",\"key\":\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\"}"}'
-      - 'HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS=${DEEP_HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS-true}'
-      - 'HASURA_GRAPHQL_UNAUTHORIZED_ROLE=${DEEP_HASURA_GRAPHQL_UNAUTHORIZED_ROLE-undefined}'
+      HASURA_GRAPHQL_DATABASE_URL: ${DEEP_HASURA_GRAPHQL_DATABASE_URL-postgres://postgres:postgrespassword@host.docker.internal:5432/postgres?sslmode=disable}
+      HASURA_GRAPHQL_ENABLE_CONSOLE: ${DEEP_HASURA_GRAPHQL_ENABLE_CONSOLE-true}
+      HASURA_GRAPHQL_DEV_MODE: ${DEEP_HASURA_GRAPHQL_DEV_MODE-true}
+      HASURA_GRAPHQL_LOG_LEVEL: ${DEEP_HASURA_GRAPHQL_LOG_LEVEL-debug}
+      HASURA_GRAPHQL_ENABLED_LOG_TYPES: ${DEEP_HASURA_GRAPHQL_ENABLED_LOG_TYPES-startup,http-log,webhook-log,websocket-log,query-log}
+      HASURA_GRAPHQL_ADMIN_SECRET: ${DEEP_HASURA_GRAPHQL_ADMIN_SECRET-myadminsecretkey}
+      HASURA_GRAPHQL_JWT_SECRET: ${DEEP_HASURA_GRAPHQL_JWT_SECRET-'{"type":"HS256","key":"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R"}'}
+      HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS: ${DEEP_HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS-true}
+      HASURA_GRAPHQL_UNAUTHORIZED_ROLE: ${DEEP_HASURA_GRAPHQL_UNAUTHORIZED_ROLE-undefined}
     logging:
       driver: "json-file"
       options:
@@ -59,17 +59,17 @@ services:
     ports:
       - "${DEEP_HASURA_STORAGE_PORT-8000}:8000"
     environment:
-      - 'HASURA_GRAPHQL_ADMIN_SECRET=${DEEP_HASURA_STORAGE_HASURA_GRAPHQL_ADMIN_SECRET}'
-      - 'DEBUG=${DEEP_HASURA_STORAGE_DEBUG-true}'
-      - 'HASURA_METADATA=${DEEP_HASURA_STORAGE_HASURA_METADATA-1}'
-      - 'HASURA_ENDPOINT=${DEEP_HASURA_STORAGE_HASURA_ENDPOINT-http://deep-hasura:8080/v1}'
-      - 'S3_ENDPOINT=${DEEP_HASURA_STORAGE_S3_ENDPOINT-http://deep-minio:9000}'
-      - 'S3_ACCESS_KEY=${DEEP_HASURA_STORAGE_S3_ACCESS_KEY-minioaccesskey}'
-      - 'S3_SECRET_KEY=${DEEP_HASURA_STORAGE_S3_SECRET_KEY-miniosecretkey}'
-      - 'S3_BUCKET=${DEEP_HASURA_STORAGE_S3_BUCKET-default}'
-      - 'S3_ROOT_FOLDER=${DEEP_HASURA_STORAGE_S3_ROOT_FOLDER-default}'
-      - 'POSTGRES_MIGRATIONS=${DEEP_HASURA_STORAGE_POSTGRES_MIGRATIONS-0}'
-      - 'POSTGRES_MIGRATIONS_SOURCE=${DEEP_HASURA_STORAGE_POSTGRES_MIGRATIONS_SOURCE-postgres://postgres:postgrespassword@host.docker.internal:5432/postgres?sslmode=disable}'
+      HASURA_GRAPHQL_ADMIN_SECRET: ${DEEP_HASURA_STORAGE_HASURA_GRAPHQL_ADMIN_SECRET}
+      DEBUG: ${DEEP_HASURA_STORAGE_DEBUG-true}
+      HASURA_METADATA: ${DEEP_HASURA_STORAGE_HASURA_METADATA-1}
+      HASURA_ENDPOINT: ${DEEP_HASURA_STORAGE_HASURA_ENDPOINT-http://deep-hasura:8080/v1}
+      S3_ENDPOINT: ${DEEP_HASURA_STORAGE_S3_ENDPOINT-http://deep-minio:9000}
+      S3_ACCESS_KEY: ${DEEP_HASURA_STORAGE_S3_ACCESS_KEY-minioaccesskey}
+      S3_SECRET_KEY: ${DEEP_HASURA_STORAGE_S3_SECRET_KEY-miniosecretkey}
+      S3_BUCKET: ${DEEP_HASURA_STORAGE_S3_BUCKET-default}
+      S3_ROOT_FOLDER: ${DEEP_HASURA_STORAGE_S3_ROOT_FOLDER-default}
+      POSTGRES_MIGRATIONS: ${DEEP_HASURA_STORAGE_POSTGRES_MIGRATIONS-0}
+      POSTGRES_MIGRATIONS_SOURCE: ${DEEP_HASURA_STORAGE_POSTGRES_MIGRATIONS_SOURCE-postgres://postgres:postgrespassword@host.docker.internal:5432/postgres?sslmode=disable}
     command: serve
     logging:
       driver: "json-file"
@@ -87,8 +87,8 @@ services:
       - "${DEEP_MINIO_PORT-9000}:9000"
       - "${DEEP_MINIO_CONSOLE_PORT-32765}:32765"
     environment:
-      - 'MINIO_ROOT_USER=${DEEP_MINIO_ROOT_USER-minioaccesskey}'
-      - 'MINIO_ROOT_PASSWORD=${DEEP_MINIO_ROOT_PASSWORD-miniosecretkey}'
+      MINIO_ROOT_USER: ${DEEP_MINIO_ROOT_USER-minioaccesskey}
+      MINIO_ROOT_PASSWORD: ${DEEP_MINIO_ROOT_PASSWORD-miniosecretkey}
     entrypoint: sh
     command: '-c ''mkdir -p /export/default && /opt/bin/minio server --address 0.0.0.0:9000 --console-address 0.0.0.0:32765 /export'''
     logging:
@@ -126,10 +126,10 @@ services:
     - /var/run/docker.sock:/var/run/docker.sock
     extra_hosts: ['host.docker.internal:host-gateway']
     environment:
-      - 'DEEPLINKS_HASURA_PATH=${DEEPLINKS_HASURA_PATH-deep-hasura:8080}'
-      - 'DEEPLINKS_HASURA_SSL=${DEEPLINKS_HASURA_SSL-0}'
-      - 'DEEPLINKS_HASURA_SECRET=${DEEPLINKS_HASURA_SECRET-myadminsecretkey}'
-      - 'JWT_SECRET=${JWT_SECRET-"{\"type\":\"HS256\",\"key\":\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\"}"}'
+      DEEPLINKS_HASURA_PATH: ${DEEPLINKS_HASURA_PATH-deep-hasura:8080}
+      DEEPLINKS_HASURA_SSL: ${DEEPLINKS_HASURA_SSL-0}
+      DEEPLINKS_HASURA_SECRET: ${DEEPLINKS_HASURA_SECRET-myadminsecretkey}
+      JWT_SECRET: ${JWT_SECRET-'{"type":"HS256","key":"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R"}'}
     logging:
       driver: "json-file"
       options:
