--- a/local/actions/docker-compose.yml
+++ b/local/actions/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     - "postgres"
     restart: always
     environment:
-      HASURA_GRAPHQL_DATABASE_URL: ${DEEP_HASURA_GRAPHQL_DATABASE_URL-postgres://postgres:postgrespassword@host.docker.internal:5432/postgres?sslmode=disable}
+      HASURA_GRAPHQL_DATABASE_URL: ${DEEP_HASURA_GRAPHQL_DATABASE_URL-postgres://postgres:postgrespassword@deep-postgres:5432/postgres?sslmode=disable}
       HASURA_GRAPHQL_ENABLE_CONSOLE: ${DEEP_HASURA_GRAPHQL_ENABLE_CONSOLE-true}
       HASURA_GRAPHQL_DEV_MODE: ${DEEP_HASURA_GRAPHQL_DEV_MODE-true}
       HASURA_GRAPHQL_LOG_LEVEL: ${DEEP_HASURA_GRAPHQL_LOG_LEVEL-debug}
