--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.374",
+  "version": "0.0.375",
   "license": "Unlicense",
   "type": "module",
   "scripts": {
@@ -99,6 +99,7 @@
     "nodemon": "^2.0.22",
     "prompt": "^1.3.0",
     "ramda": "^0.29.1",
+    "react-apollo-network-status": "^5.2.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
