--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.411",
+  "version": "0.0.412",
   "license": "Unlicense",
   "type": "module",
   "scripts": {
@@ -101,6 +101,7 @@
     "ramda": "^0.29.1",
     "react-apollo-network-status": "^5.2.1",
     "react-dom": "^18.2.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
